fix: margins on mobile

--- a/src/components/Countdown/style.scss
+++ b/src/components/Countdown/style.scss
@@ -57,7 +57,7 @@
 
             @media screen and ( min-width: 600px ) {
 
-                margin: -6px;
+                margin: -7px;
 
             }
 
